bloodc/src/parser/snapshots/bloodc__parser__tests__edge_unit_return.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Tuple(
                            [],
                        ),
                        span: Span {
                            start: 10,
                            end: 12,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Tuple(
                                    [],
                                ),
                                span: Span {
                                    start: 15,
                                    end: 17,
                                    start_line: 1,
                                    start_col: 16,
                                },
                            },
                        ),
                        span: Span {
                            start: 13,
                            end: 19,
                            start_line: 1,
                            start_col: 14,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 19,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 19,
        start_line: 1,
        start_col: 1,
    },
}
