bloodc/src/parser/snapshots/bloodc__parser__tests__effect_with_extends.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Effect(
            EffectDecl {
                attrs: [],
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 8,
                        end: 14,
                        start_line: 2,
                        start_col: 8,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 2,
                                            start_col: 15,
                                        },
                                    },
                                    bounds: [],
                                    default: None,
                                    span: Span {
                                        start: 15,
                                        end: 16,
                                        start_line: 2,
                                        start_col: 15,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 14,
                            end: 17,
                            start_line: 2,
                            start_col: 14,
                        },
                    },
                ),
                extends: [
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 26,
                                                end: 31,
                                                start_line: 2,
                                                start_col: 26,
                                            },
                                        },
                                        args: Some(
                                            TypeArgs {
                                                args: [
                                                    Type(
                                                        Type {
                                                            kind: Path(
                                                                TypePath {
                                                                    segments: [
                                                                        TypePathSegment {
                                                                            name: Spanned {
                                                                                node: SymbolU32 {
                                                                                    value: 2,
                                                                                },
                                                                                span: Span {
                                                                                    start: 32,
                                                                                    end: 33,
                                                                                    start_line: 2,
                                                                                    start_col: 32,
                                                                                },
                                                                            },
                                                                            args: None,
                                                                        },
                                                                    ],
                                                                    span: Span {
                                                                        start: 32,
                                                                        end: 33,
                                                                        start_line: 2,
                                                                        start_col: 32,
                                                                    },
                                                                },
                                                            ),
                                                            span: Span {
                                                                start: 32,
                                                                end: 33,
                                                                start_line: 2,
                                                                start_col: 32,
                                                            },
                                                        },
                                                    ),
                                                ],
                                                span: Span {
                                                    start: 31,
                                                    end: 34,
                                                    start_line: 2,
                                                    start_col: 31,
                                                },
                                            },
                                        ),
                                    },
                                ],
                                span: Span {
                                    start: 26,
                                    end: 34,
                                    start_line: 2,
                                    start_col: 26,
                                },
                            },
                        ),
                        span: Span {
                            start: 26,
                            end: 34,
                            start_line: 2,
                            start_col: 26,
                        },
                    },
                ],
                operations: [
                    OperationDecl {
                        name: Spanned {
                            node: SymbolU32 {
                                value: 4,
                            },
                            span: Span {
                                start: 44,
                                end: 47,
                                start_line: 3,
                                start_col: 8,
                            },
                        },
                        type_params: None,
                        params: [],
                        return_type: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 53,
                                                    end: 54,
                                                    start_line: 3,
                                                    start_col: 17,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 53,
                                        end: 54,
                                        start_line: 3,
                                        start_col: 17,
                                    },
                                },
                            ),
                            span: Span {
                                start: 53,
                                end: 54,
                                start_line: 3,
                                start_col: 17,
                            },
                        },
                        span: Span {
                            start: 41,
                            end: 55,
                            start_line: 3,
                            start_col: 5,
                        },
                    },
                ],
                span: Span {
                    start: 1,
                    end: 57,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 57,
        start_line: 2,
        start_col: 1,
    },
}
