bloodc/src/parser/snapshots/bloodc__parser__tests__enum_with_data.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Enum(
            EnumDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 6,
                        end: 12,
                        start_line: 2,
                        start_col: 6,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 13,
                                            end: 14,
                                            start_line: 2,
                                            start_col: 13,
                                        },
                                    },
                                    bounds: [],
                                    default: None,
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 2,
                                        start_col: 13,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 12,
                            end: 15,
                            start_line: 2,
                            start_col: 12,
                        },
                    },
                ),
                variants: [
                    EnumVariant {
                        attrs: [],
                        name: Spanned {
                            node: SymbolU32 {
                                value: 3,
                            },
                            span: Span {
                                start: 22,
                                end: 26,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                        body: Tuple(
                            [
                                TupleField {
                                    attrs: [],
                                    vis: Private,
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 27,
                                                                end: 28,
                                                                start_line: 3,
                                                                start_col: 10,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 27,
                                                    end: 28,
                                                    start_line: 3,
                                                    start_col: 10,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 27,
                                            end: 28,
                                            start_line: 3,
                                            start_col: 10,
                                        },
                                    },
                                    span: Span {
                                        start: 27,
                                        end: 28,
                                        start_line: 3,
                                        start_col: 10,
                                    },
                                },
                            ],
                        ),
                        discriminant: None,
                        span: Span {
                            start: 22,
                            end: 29,
                            start_line: 3,
                            start_col: 5,
                        },
                    },
                    EnumVariant {
                        attrs: [],
                        name: Spanned {
                            node: SymbolU32 {
                                value: 4,
                            },
                            span: Span {
                                start: 35,
                                end: 39,
                                start_line: 4,
                                start_col: 5,
                            },
                        },
                        body: Unit,
                        discriminant: None,
                        span: Span {
                            start: 35,
                            end: 39,
                            start_line: 4,
                            start_col: 5,
                        },
                    },
                ],
                span: Span {
                    start: 1,
                    end: 42,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 42,
        start_line: 2,
        start_col: 1,
    },
}
